Fix MultiPicturePane
Change logic of the multipicturepane to apply border to the selected image.